crates/ruff_python_parser/tests/snapshots/invalid_syntax@let_stmt_else_missing_colon.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/let_stmt_else_missing_colon.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..42,
        body: [
            Let(
                StmtLet {
                    node_index: NodeIndex(None),
                    range: 0..41,
                    pattern: MatchClass(
                        PatternMatchClass {
                            node_index: NodeIndex(None),
                            range: 4..15,
                            cls: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 4..9,
                                    id: Name("Point"),
                                    ctx: Load,
                                },
                            ),
                            arguments: PatternArguments {
                                range: 9..15,
                                node_index: NodeIndex(None),
                                patterns: [
                                    MatchAs(
                                        PatternMatchAs {
                                            node_index: NodeIndex(None),
                                            range: 10..11,
                                            pattern: None,
                                            name: Some(
                                                Identifier {
                                                    id: Name("x"),
                                                    range: 10..11,
                                                    node_index: NodeIndex(None),
                                                },
                                            ),
                                        },
                                    ),
                                    MatchAs(
                                        PatternMatchAs {
                                            node_index: NodeIndex(None),
                                            range: 13..14,
                                            pattern: None,
                                            name: Some(
                                                Identifier {
                                                    id: Name("y"),
                                                    range: 13..14,
                                                    node_index: NodeIndex(None),
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 19..25,
                            id: Name("origin"),
                            ctx: Load,
                        },
                    ),
                    orelse: [
                        Return(
                            StmtReturn {
                                node_index: NodeIndex(None),
                                range: 35..41,
                                value: None,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | let Point(x, y) := origin else
  | ^^^^^^^^^^^^^^^ Syntax Error: a destructuring `let` is not valid in .py files
2 |     return
  |


  |
1 | let Point(x, y) := origin else
  |                               ^ Syntax Error: Expected `:`, found newline
2 |     return
  |
